[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tkat" 
version = "0.1.0" 
description = "Temporal KAN Transformer"
authors = [ "Rémi Genet", "Hugo Inzirillo"]  
readme = "README.md"  
packages = [{include = "tkat"}]  

[tool.poetry.dependencies]
python = ">=3.10,<4.0" 
numpy = ">=1.2,<2"
tensorflow = ">=2.8,<3" 
tkan = ">=0.2.0,<0.3.0"